Prepare OTP infrastructure. Implement backend initialization procedure

--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,9 @@
     {release, {"dlss", "0.0.1"},[
         kernel,
         stdlib,
-        lager
+        lager,
+        {mnesia,load},
+        mnesia_eleveldb
     ]},
     {include_erts, false},
     {vm_args, "./config/vm.args"},
