Bug fix with compiling eleveldb

--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,27 @@
     {apps, [dlss]}
 ]}.
 
+{overrides,
+    [{override, eleveldb,
+        [
+            {artifacts, ["priv/eleveldb.so"]},
+            {pre_hooks, [{compile, "c_src/build_deps.sh get-deps"},
+                {compile, "c_src/build_deps.sh"}]},
+
+            {post_hooks, [{clean, "c_src/build_deps.sh clean"}]},
+
+            {plugins, [pc]},
+
+            {provider_hooks, [{post,
+                [{compile, {pc, compile}},
+                    {clean, {pc, clean}}
+                ]
+            }]
+            }
+        ]
+    }]
+}.
+
 {relx,[
     {release, {"dlss", "0.0.1"},[
         kernel,
