--- a/rebar.config
+++ b/rebar.config
@@ -10,26 +10,24 @@
     {apps, [dlss]}
 ]}.
 
-{overrides,
-    [{override, eleveldb,
-        [
-            {artifacts, ["priv/eleveldb.so"]},
-            {pre_hooks, [{compile, "c_src/build_deps.sh get-deps"},
-                {compile, "c_src/build_deps.sh"}]},
-
-            {post_hooks, [{clean, "c_src/build_deps.sh clean"}]},
-
-            {plugins, [pc]},
-
-            {provider_hooks, [{post,
-                [{compile, {pc, compile}},
-                    {clean, {pc, clean}}
-                ]
-            }]
-            }
-        ]
-    }]
-}.
+%%-----eleveldb for rebar3------------------
+{overrides,[
+    {override, eleveldb,[
+        {artifacts, ["priv/eleveldb.so"]},
+        {pre_hooks, [
+            {compile, "c_src/build_deps.sh get-deps"},
+            {compile, "c_src/build_deps.sh"}
+        ]},
+        {post_hooks, [{clean, "c_src/build_deps.sh clean"}]},
+        {plugins, [pc]},
+        {provider_hooks, [
+            {post, [
+                {compile, {pc, compile}},
+                {clean, {pc, clean}}
+            ]}
+        ]}
+     ]}
+]}.
 
 {relx,[
     {release, {"dlss", "0.0.1"},[
