Performance test for leveldb backend

--- a/rebar.config
+++ b/rebar.config
@@ -31,11 +31,12 @@
 
 {relx,[
     {release, {"dlss", "0.0.1"},[
-        kernel,
-        stdlib,
-        lager,
-        {mnesia,load},
-        mnesia_eleveldb
+      kernel,
+      stdlib,
+      lager,
+      {mnesia,load},
+      mnesia_eleveldb,
+      dlss
     ]},
     {include_erts, false},
     {vm_args, "./config/vm.args"},
