Optimization of scanning by interval

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 {deps, [
     {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
-    {mnesia_eleveldb,{git,"https://github.com/klarna/mnesia_eleveldb.git",{tag, "1.1.1"}}}
+    {mnesia_eleveldb,{git,"https://github.com/vzroman/mnesia_eleveldb.git",{branch, "master"}}}
 ]}.
 
 {shell, [
