--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{erl_opts, [ {parse_transform, lager_transform} ]}.
+{erl_opts, [ {parse_transform, lager_transform}, warnings_as_errors ]}.
 
 {deps, [
     {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
