--- a/rebar.config
+++ b/rebar.config
@@ -2,9 +2,7 @@
 
 {deps, [
     {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
-    {mnesia_eleveldb,{git,"https://github.com/vzroman/mnesia_eleveldb.git",{branch, "master"}}},
-    {meck, "", {git, "https://github.com/eproxus/meck.git", {branch, master}}},
-    {ctdh, "", {git, "https://github.com/egobrain/ctdh.git", {branch, master}}}
+    {mnesia_eleveldb,{git,"https://github.com/vzroman/mnesia_eleveldb.git",{branch, "master"}}}
 ]}.
 
 {shell, [
