--- a/config/sys.config
+++ b/config/sys.config
@@ -3,10 +3,12 @@
 		{segment_limit,1024},
 		{supervisor_scan_cycle,1000},
 		{master_node_cycle,1000},
-		{segment_scan_cycle,5000},
-		{segment_stop_timeout,60000},
+		{storage_supervisor_cycle,5000},
+		{storage_stop_timeout,60000},
 		{stop_timeout,600000},
 		{start_timeout,600000},
+		{storage_max_restarts, 10},
+		{storage_max_period, 1000},
 		{force,false},
 		{as_node,false}
 	]}
