--- a/config/sys.config
+++ b/config/sys.config
@@ -1,6 +1,5 @@
 [
 	{dlss, [
-		{segment_limit,1024},
 		{supervisor_scan_cycle,1000},
 		{master_node_cycle,1000},
 		{storage_supervisor_cycle,5000},
@@ -9,6 +8,12 @@
 		{start_timeout,600000},
 		{storage_max_restarts, 10},
 		{storage_max_period, 1000},
+		{segment_level_limit,[
+			{ 0, 1024 },
+			{ 1, 1024 },
+			{ 2, 1024 }
+		]},
+		{buffer_level_limit,3},
 		{force,false},
 		{as_node,false}
 	]}
