--- a/config/sys.config
+++ b/config/sys.config
@@ -13,6 +13,7 @@
 			{ 1, 1024 },
 			{ 2, 1024 }
 		]},
+		{segment_split_median, 0.65},
 		{buffer_level_limit,3},
 		{force,false},
 		{as_node,false}
