--- a/config/sys.config
+++ b/config/sys.config
@@ -5,7 +5,8 @@
 		{storage_supervisor_cycle,5000},
 		{storage_stop_timeout,60000},
 		{stop_timeout,600000},
-		{start_timeout,600000},
+		{start_timeout,3600000},
+		{schema_start_timeout,600000},
 		{storage_max_restarts, 10},
 		{storage_max_period, 1000},
 		{segment_level_limit,[
