--- a/config/sys.config
+++ b/config/sys.config
@@ -15,6 +15,7 @@
 		]},
 		{segment_split_median, 0.65},
 		{force,false},
-		{as_node,false}
+		{as_node,false},
+		{on_partitioning, none}
 	]}
 ].
