--- a/config/sys.config
+++ b/config/sys.config
@@ -16,6 +16,7 @@
 		{segment_split_median, 0.65},
 		{force,false},
 		{as_node,false},
-		{on_partitioning, none}
+		{on_partitioning, none},
+		{segment_delay_timeout, 10000}
 	]}
 ].
