Correct mnesia repository

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 {deps, [
     {lager, {git, "https://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
-    {mnesia,{git,"git@github.com:vzroman/mnesia.git",{branch, "v4.16.3"}}},
+    {mnesia,{git,"https://github.com/vzroman/mnesia.git",{branch, "v4.16.3"}}},
     {mnesia_eleveldb,{git,"https://github.com/vzroman/mnesia_eleveldb.git",{branch, "master"}}}
 ]}.
 
