Prepare environment for storage density check

--- a/config/sys.config
+++ b/config/sys.config
@@ -17,6 +17,8 @@
 		{force,false},
 		{as_node,false},
 		{on_partitioning, none},
-		{segment_delay_timeout, 10000}
+		{segment_delay_timeout, 10000},
+		{density_check_interval, 3600},
+		{density_limit, 0.8}
 	]}
 ].
