--- a/config/sys.config
+++ b/config/sys.config
@@ -10,7 +10,7 @@
 		{storage_max_restarts, 10},
 		{storage_max_period, 1000},
 		{segment_level_limit,[
-			{ 0, 64 },
+			{ 0, 512 },
 			{ 1, 4096 }
 		]},
 		{segment_split_median, 0.65},
@@ -18,7 +18,7 @@
 		{as_node,false},
 		{on_partitioning, none},
 		{segment_delay_timeout, 10000},
-		{density_check_interval, 3600},
+		{density_check_interval, none},
 		{density_limit, 0.8}
 	]}
 ].
