--- a/config/sys.config
+++ b/config/sys.config
@@ -9,16 +9,14 @@
 		{schema_start_timeout,86400000},
 		{storage_max_restarts, 10},
 		{storage_max_period, 1000},
-		{segment_level_limit,[
-			{ 0, 512 },
-			{ 1, 4096 }
-		]},
+		{segment_level_limit,#{
+			0 => 512,
+			1 => 4096
+		}},
 		{segment_split_median, 0.65},
 		{force,false},
 		{as_node,false},
 		{on_partitioning, none},
-		{segment_delay_timeout, 300000},
-		{density_check_interval, none},
-		{density_limit, 0.8}
+		{segment_delay_timeout, 300000}
 	]}
 ].
