--- a/config/sys.config
+++ b/config/sys.config
@@ -5,8 +5,8 @@
 		{storage_supervisor_cycle,5000},
 		{storage_stop_timeout,60000},
 		{stop_timeout,600000},
-		{start_timeout,86400000},
-		{schema_start_timeout,86400000},
+		{start_timeout,60000},
+		{schema_start_timeout,60000},
 		{storage_max_restarts, 10},
 		{storage_max_period, 1000},
 		{segment_level_limit,#{
@@ -14,8 +14,6 @@
 			1 => 4096
 		}},
 		{segment_split_median, 0.65},
-		{force,false},
-		{as_node,false},
 		{on_partitioning, none},
 		{segment_delay_timeout, 300000}
 	]}
