--- a/config/sys.config
+++ b/config/sys.config
@@ -1,18 +1,13 @@
 [
 	{dlss, [
-		{supervisor_scan_cycle,1000},
-		{master_node_cycle,1000},
-		{storage_supervisor_cycle,5000},
-		{storage_stop_timeout,60000},
 		{stop_timeout,600000},
 		{start_timeout,60000},
-		{storage_max_restarts, 10},
-		{storage_max_period, 1000},
+		{max_restarts, 10},
+		{max_period, 1000},
 		{segment_level_limit,#{
 			0 => 256,
 			1 => 512
 		}},
-		{segment_split_median, 0.65},
 		{on_partitioning, none},
 		{segment_delay_timeout, 300000}
 	]}
